# ziptie

./: LICENSE  README.md  pyproject.toml  setup.py
src/ziptie/: algo.py  benchmark.py  benchmark_plot.py  example.py
ziptie/: algo.py  benchmark.py  benchmark_plot.py  example.py  ziptie.py  ziptie_numba.py
